EXTRA_DIST = \
BroadcastLayer.h \
	CBR.h \
	Cache.h \
	CacheRND.h \
	CacheLRU.h \
	CBCBDataCollector.h \
	CBCBNodeFactory.h \
	CBCBNode.h \
	CBCBSimulation.h \
        CCNxNode.h \
        ICP.h \
	Socket.h \
        SocketManager.h \
	LoadBalancing.h \
	ME.h \
	MSTBroadcastLayer.h \
	PredicateIssueTimer.h \
	PredicateRefreshTimer.h \
	ProtocolOptions.h \
	cbcbsim_types.h\
	RA.h \
	SPTsBroadcastLayer.h \
	SR.h \
	SRSendTimer.h \
	UR.h \
	ServedContent.h \
	PITable.h \
	CCNxPackets.h \
	OutputQueue.h \
	RAQM.h \
	FlowController.h \
	RAQMsource.h \
	RTTstats.h \
	FlowControllerAIMD.h
